--- a/index.html
+++ b/index.html
@@ -6,51 +6,75 @@
   <title>Save Moha Jami Contact</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Helvetica Neue', sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
-      background-color: #f5f5f5;
+      background-color: #0a0a0a;
+      color: #ffffff;
+      margin: 0;
     }
     .card {
-      background: white;
+      background: #121212;
       padding: 2em;
-      border-radius: 12px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+      border-radius: 16px;
+      box-shadow: 0 0 20px rgba(100, 149, 237, 0.15);
       text-align: center;
+      max-width: 420px;
     }
     .card h2 {
       margin-top: 0;
+      color: #7fbaff;
+      text-shadow: 0 0 6px #7fbaff;
+      font-family: 'Helvetica Neue', sans-serif;
     }
     .card p {
       margin: 0.5em 0;
+      line-height: 1.5;
+    }
+    .intro {
+      margin-bottom: 1em;
+      color: #7fbaff;
+      font-style: italic;
+    }
+    .identity {
+      font-size: 1.05em;
+      color: #dddddd;
+      margin-bottom: 1em;
+      font-family: 'Georgia', serif;
+    }
+    .note {
+      font-size: 0.85em;
+      margin-top: 1.5em;
+      color: #bbbbbb;
     }
     .btn {
       margin-top: 1.5em;
       padding: 0.8em 1.5em;
       font-size: 1em;
-      color: white;
-      background-color: #25d366;
+      color: #ffffff;
+      background: linear-gradient(45deg, #4a90e2, #d16ba5);
       border: none;
       border-radius: 8px;
       cursor: pointer;
+      box-shadow: 0 0 10px rgba(74, 144, 226, 0.3);
     }
     .btn:hover {
-      background-color: #1ebc57;
+      opacity: 0.95;
     }
   </style>
 </head>
 <body>
   <div class="card">
     <h2>Save Contact</h2>
-    <p><strong>Name:</strong> Moha Jami</p>
-    <p><strong>Phone:</strong> +34 603 203 770</p>
-    <p><strong>Role:</strong> Founder of Humo Ibiza & Mute Mallorca<br/>Partner at Amarre Club Mallorca</p>
+    <p class="identity">Creative mind behind Humo Ibiza & Mute Mallorca.<br> Co-owner at Amarre Club Palma.</p>
+    <p class="intro">Yo, I'm Moha. Hit the button below to save my contact — I usually reply in a few hours.</p>
     <a href="https://drive.google.com/uc?export=download&id=12lWdjNo5AfJRrZG83pNAV2ItDR0C-V29" download>
       <button class="btn">Download Contact</button>
     </a>
+    <p class="note">Once downloaded, open the file from your Contacts app to save it.</p>
   </div>
 </body>
 </html>
